# Axle

./: .gitignore  Aims.axl  CMakeLists.txt  LICENSE  README.md  UpgradeLog.htm  out
DebugLib/: lib_main.c
Tester/src/: main.c  tester.c  tester.h
docs/: syntax.axl
include/Axle/: api.h  calling_convention.h  comp_utilities.h  tracing_wrapper.h
include/Axle/backends/: PE_file_format.h  x64_backend.h
integration_tests/: CMakeLists.txt
integration_tests/src/: arrays.axl  fib_loop.axl  fib_recurse.axl  fnv1_hash.axl  fnv1_hash_double.axl  fnv1_hash_single.axl  fnv1_hash_slice.axl  globals.axl  operators_comptime.axl  operators_signed.axl  operators_unsigned.axl  pointers.axl  slices.axl  structs.axl  test_client_main.cpp  test_contexts.hpp  test_server_main.cpp  tests.cpp
lib/: Tracer.lib
lib_include/: tester.h  trace.h
sandbox/: CMakeLists.txt  assemble.bat  output.nasm  trace.json
sandbox/src/: bigger.axl  build.axl  sandbox.axl  sandbox.cpp  sandbox2.axl  sandbox_print.axl  util.axl
src/: CMakeLists.txt  PE_file_format.cpp  PE_file_format.h  Program.h  allocators.h  api.cpp  api.h  args.h  ast.cpp  ast.h  backends.cpp  backends.h  bytecode.cpp  bytecode.h  bytecode_incs.h  calling_convention.h  calling_conventions.cpp  calling_conventions.h  comp_utilities.h  compiler.cpp  compiler.h  dependency_check.cpp  dependency_check.h  errors.cpp  errors.h  files.cpp  files.h  format.cpp  format.h  formattable.h  io.cpp  io.h  ir.cpp  ir.h  ir_ast_info.h  machine_code.cpp  machine_code.h  main.cpp  memory.cpp  memory.h  (+31 more)
src/backends/: PE_file_format.cpp  vm_backend.cpp  x64_backend.cpp
stdlib/: io.axl  io_generic.axl  kernel32.axl  memory.axl  strings.axl  tester.axl
tests/src/: arrays.axl  containers_tests.cpp  fib_recurse.axl  files_tests.cpp  format_tests.cpp  ir_tests.cpp  math_tests.cpp  operators_comptime.axl  operators_signed.axl  operators_unsigned.axl  pointers.axl  string_tests.cpp  tests.cpp  tests.h  type_tests.cpp  unit_tests.cpp  unit_tests.h
unit_tests/: CMakeLists.txt  errors_tests.cpp  ir_tests.cpp  names_tests.cpp  test_client_main.cpp  test_server_main.cpp  tests_main.cpp  type_tests.cpp  vm_tests.cpp
unit_tests/src/: files_tests.cpp  format_tests.cpp  math_tests.cpp  string_tests.cpp  unit_tests.cpp  unit_tests.h  vm_tests.cpp
